<resources>
    <string name="app_name">Adwitter</string>


    <!-- Login Screen-->
    <string name="loginText_welcome">Welcome Back!</string>
    <string name="textLogin_ready">Are you ready to start order now?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="or">OR</string>
    <string name="dont_have_account">Don\'t have an account yet?</string>
    <string name="google" translatable="false">google</string>
    <string name="twitter" translatable="false">twitter</string>
    <string name="facebook" translatable="false">facebook</string>


    <!--Register Screen-->
    <string name="create_account">Create Account</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back">Back</string>


    <!--NOTIFICATION-->
    <string name="main_notification_channel_name" translatable="false">Primary</string>
    <string name="not_identical">Not identical</string>
    <string name="enter_password">Please enter the password for your account</string>
    <string name="start_number_error">Name cannot start with number.</string>


    <!--common-->
    <string name="image">image</string>
    <string name="logout">Log out</string>
    <string name="navigation_drawer_open" translatable="false">navigation drawer open</string>
    <string name="navigation_drawer_close" translatable="false">navigation drawer close</string>
    <string name="normal">normal</string>
    <string name="twitter_image_size" translatable="false">400x400</string>


    <!--Navigation drawer-->
    <string name="name">name</string>
    <string name="active">Active</string>
    <string name="balance">Balance: %1$s</string>

    <!--accounts|home screen-->
    <string name="home">Home</string>
    <string name="followers_number" formatted="true">%1$d FOLLOWERS</string>
    <string name="add_account_success">Account successfully added</string>
    <string name="no_account">No Accounts</string>
    <string name="pending">Pending</string>
    <string name="reconnect">Re-Connect</string>
    <string name="retry">Retry</string>
    <string name="internet_issue">Internet Connection Issue</string>

    <!--add account-->
    <string name="targeting_setting">Targeting Settings</string>
    <string name="location_country_city">Area (Country/City)</string>
    <string name="interest_targeting">Interest Targeting</string>
    <string name="age_targeting">Age</string>
    <string name="link_twitter_account">Link Twitter Account</string>
    <string name="choose_interest">Choose Interests</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="choose_area">Choose Area</string>
    <string name="choose_age">Choose Age</string>
    <string name="target_missing">Please choose all targets.</string>


    <!--monitor screen-->
    <string name="monitor">Monitor</string>

    <!--bank information-->
    <string name="bank_information">Bank Information</string>
    <string name="save">Save</string>


    <!--Payment and Financial-->
    <string name="payment_and_financial">Payment and Financial</string>


    <!--bank account fragment-->
    <string name="phone">Phone Number</string>
    <string name="bank_account">BANK ACCOUNT</string>
    <string name="bank_country">Bank Country</string>
    <string name="bank_name">Bank Name</string>
    <string name="beneficiaryName">Beneficiary Name</string>
    <string name="account_number">Account Number</string>
    <string name="balance_hint">Balance</string>
    <string name="iban">Iban</string>
    <string name="edit_information">Edit</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="proceed">Proceed</string>


    <!--Paypal Fragment-->
    <string name="paypal">Paypal</string>


    <!--Call Support-->
    <string name="call_support">Call Support</string>


    <!-- API KEYS-->
    <string name="GOOGLE_SERVER_CLIENT_ID" translatable="false">770152989571-prgbv3932o2dq7heb5559dpvhfb9adqs.apps.googleusercontent.com</string>
    <string name="twitterApaiKey" translatable="false">urPgsHNnrz7QTl0XqOUhI56cq</string>
    <string name="twitterSecretKey" translatable="false">YQR3wftU1hSPh6qiwOa9Zl1E49JRjAmrTxcfYhkGTuvEhVSTAP</string>
    <string name="facebook_app_id" translatable="false">2265779510318787</string>
    <string name="error_bank_details">Error geting bank infromation</string>


</resources>
